--- a/index.html
+++ b/index.html
@@ -98,12 +98,12 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="false">
   <div class="carousel-inner">
     <div class="carousel-item active container-fluid">
-      <h2 class="test-head">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+      <h2 class="test-head">I no longer have to sniff other dogs for love. I've found the hottest Corgi on PetHub. Woof.</h2>
       <img class="test-img" src="images/dog-img.jpg" alt="dog-profile">
       <em>Pebbles, New York</em>
     </div>
     <div class="carousel-item container-fluid">
-      <h2 class="test-head">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+      <h2 class="test-head">My dog used to be so lonely, but with PetHub's help, they've found the love of their life. I think.</h2>
       <img class="test-img" src="images/lady-img.jpg" alt="lady-profile">
       <em>Beverly, Illinois</em>
     </div>
